--- a/wyswietl.html
+++ b/wyswietl.html
@@ -17,9 +17,11 @@
 </table></center><br><br>
 
 
+<center><input type="submit" value="Wyświetl alfabetycznie" class="pill button" style="width: 230px" /><center><br>
 <center><input type="submit" value="Dodaj lek" class="pill button" style="width: 230px" /><center><br>
-<center><input type="submit" value="Usuń lek" style="width: 230px"/><center><br>
 <center><input type="submit" value="Edytuj" style="width: 230px" /><center><br>
+<center><input type="submit" value="Usuń lek" style="width: 230px"/><center><br>
+
 
 <body>
 <hr />
