--- a/usun.html
+++ b/usun.html
@@ -18,7 +18,7 @@
 </table></center><br><br>
 
 <br><center><H1>Usuwasz lek: </H1></center>
- <center><H3> wpisz jego ID leku, który chcesz usunąć</H3></center><br>
+ <center><H3> wpisz ID leku, który chcesz usunąć</H3></center><br>
 
 <center><form>
 <T3>ID:</T3> <input type = "text" style="width: 50px"><br /><br>
